# portal-backend

./: CMakeLists.txt  CMakePresets.json  Dockerfile
build-dbg/: CMakeCache.txt  Makefile  cmake_install.cmake
build-rls/: CMakeCache.txt  Makefile  cmake_install.cmake  env.sh  package-lock.json
include/: bkend-sql.hpp
src/: bkend-sql.cpp  main.cpp
tests/: test_backend.cpp
